# manim-quantum

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_examples.py  pennylane_examples.py
src/manim_quantum/: __init__.py
src/manim_quantum/animations/: __init__.py  bloch_animations.py  circuit_animations.py
src/manim_quantum/bloch/: __init__.py  sphere.py
src/manim_quantum/circuits/: __init__.py  circuit.py  gate.py  wire.py
src/manim_quantum/pennylane/: __init__.py  converter.py
src/manim_quantum/states/: __init__.py  ket.py  state_vector.py
src/manim_quantum/styles/: __init__.py
tests/: __init__.py  conftest.py  test_core.py
